style: fixing margin and gaps

--- a/cattuccino/src/components/Header/Header.module.css
+++ b/cattuccino/src/components/Header/Header.module.css
@@ -15,6 +15,8 @@
 .head-title {
     align-items: center;
     margin-right: auto;
+    line-height: 7vh;
+    margin-left: 5%;
 }
 
 .info {
@@ -29,8 +31,14 @@
     background-color: #fff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
+    margin-right: 15px;
 }
-
+.container {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    margin-right: 40px; 
+}
 .search-icon {
     width: 20px;
     height: 20px;
@@ -78,7 +86,6 @@
     flex-direction: row;
     text-align: center;
     align-items: center;
-    gap: 20px;
     margin-left: auto;
 }
 
